--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.1",
     "react": "^17.0.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-form": "^8.3.8",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
