--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "react": "^17.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.0",
     "react-google-login": "^5.2.2",
