--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "node-sass": "^7.0.3",
     "react": "^17.0.0",
     "react-bootstrap": "^2.4.0",
     "react-cookies": "^0.1.1",
