--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^17.0.0",
     "react-bootstrap": "^2.4.0",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-simple-timestamp-to-date": "^1.0.3",
     "redux": "^4.1.2",
     "redux-form": "^8.3.8",
     "redux-persist": "^6.0.0",
